--- a/DemoApp/package.json
+++ b/DemoApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DemoApp",
+  "name": "demoapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^5.0.1",
     "react": "16.3.1",
     "react-native": "0.55.3"
   },
@@ -18,5 +19,9 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
